# dask-awkward

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  MANIFEST.in  README.md  codecov.yml  noxfile.py  pyproject.toml  setup.cfg
.github/envs/: environment-3.10.yml  environment-3.11.yml  environment-3.13.yml  environment-3.7.yml  environment-3.8.yml  environment-3.9.yml  requirements.txt
.github/workflows/: awkward-main.yml  conda-tests.yml  coverage.yml  lint.yml  minimum-dependencies.yml  no-awkward-test.yml  pr-title.yml  pypi-release.yml  pypi-tests.yml  tests.yml  uproot-main.yml
demos/: 2021-09-16.ipynb
docs/: api-collections.rst  api-inspect.rst  api-io.rst  api-utilities.rst  api.rst  api_array.rst  api_io.rst  api_reducers.rst  api_structure.rst  conf.py  contributing.rst  dev-contributing.rst  dev-releasing.rst  faq.rst  gs-install.rst  gs-intro.rst  gs-terminology.rst  ht-behaviors.rst  ht-configuration.rst  ht-io.rst  index.rst  intro.rst  limitations.rst  me-faq.rst  me-optimization.rst  terminology.rst
docs/api/: behavior.rst  collections.rst  inspect.rst  io.rst  mapfilter.rst  reducers.rst  structure.rst  utils.rst
docs/dev/: contributing.rst  releasing.rst
docs/examples/: 20211111.ipynb  demo-00.ipynb  sandbox.py
docs/examples/io-tutorial/: io-00-basic.ipynb  io-01-advanced.ipynb  notebook.ipynb
docs/examples/io-tutorial/data/parquet/: part0.parquet  part1.parquet  part2.parquet  part3.parquet
docs/getting-started/: install.rst  intro.rst  limitations.rst  terminology.rst
docs/how-to/: behaviors.rst  configuration.rst  io.rst  mapfilter.rst
docs/more/: faq.rst  optimization.rst
scratch/: README.md  sandbox.py
scratch/data/: arr1.json  arr2.json  arr3.json  file1.json  file2.json  simple1.json  simple2.json  simple3.json
src/: LICENSE
src/dask_awkward/: __init__.py  awkward.yaml  collection.py  config.py  core.py  describe.py  io.py  json.py  kernel_level.py  layers.py  optimize.py  parquet.py  pickle.py  reducers.py  routines.py  sizeof.py  structure.py  testutils.py  typing.py  unproject_layout.py  uproot.py  utils.py  version.pyi
src/dask_awkward/data/: __init__.py
src/dask_awkward/io/: io.py  json.py  parquet.py  scratch.py  uproot.py
src/dask_awkward/layers/: __init__.py  layers.py
src/dask_awkward/lib/: __init__.py  _getitem.py  _utils.py  compat.py  core.py  decorator.py  describe.py  inspect.py  mapfilter.py  operations.py  optimize.py  reducers.py  str.py  structure.py  testutils.py  unproject_layout.py  utils.py
src/dask_awkward/lib/io/: columnar.py  io.py  json.py  parquet.py  scratch.py  text.py
src/dask_awkward/manual/: __init__.py  column_optimization.py
src/dask_awkward/tests/: conftest.py  environment-3.9.yml  helpers.py  test_behavior.py  test_core.py  test_describe.py  test_getitem.py  test_io.py  test_parquet.py  test_reducers.py  test_routines.py  test_structure.py  test_ufunc.py  test_utils.py
src/dask_awkward/tests/data/: records.json  single-record.json
src/dask_awkward_sizeof/: __init__.py
tests/: conftest.py  environment-3.7.yml  environment-3.8.yml  environment-3.9.yml  helpers.py  test_behavior.py  test_core.py  test_decorator.py  test_describe.py  test_distributed.py  test_getitem.py  test_inspect.py  test_io.py  test_io_json.py  test_io_text.py  test_layers.py  test_manual.py  test_mapfilter.py  test_no_awkward.py  test_operations.py  test_optimize.py  test_parquet.py  test_pickle.py  test_reducers.py  test_routines.py  test_sizeof.py  test_str.py  test_structure.py  test_ufunc.py  test_unproject_layout.py  test_utils.py
tests/data/: records.json
tests/test-uproot/: nano_dy.root
