[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dask-awkward"
description = "Awkward Array meets Dask"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
authors = [
  { name = "Doug Davis", email = "ddavis@ddavis.io" },
  { name = "Martin Durant", email = "mdurant@anaconda.com" },
]
maintainers = [
  { name = "Doug Davis", email = "ddavis@ddavis.io" },
  { name = "Martin Durant", email = "mdurant@anaconda.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "awkward >=2.2.4",
  "dask >=2023.04.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/dask-contrib/dask-awkward"
"Bug Tracker" = "https://github.com/dask-contrib/dask-awkward/issues"

[project.optional-dependencies]
io = [
  "aiohttp",
  "pyarrow",
]
complete = [
  "dask-awkward[io]",
]
# `docs` and `test` are separate from user installs
docs = [
  "dask-awkward[complete]",
  "dask-sphinx-theme >=3.0.2",
  "sphinx-design",
  "requests >=2.27.1",
]
test = [
  "dask-awkward[complete]",
  "distributed",
  "pandas",
  "pytest >=6.0",
  "pytest-cov >=3.0.0",
  "requests >=2.27.1",
]

[project.entry-points."dask.sizeof"]
awkward = "dask_awkward.sizeof:register"

[tool.hatch.version]
source = "vcs"
path = "src/dask_awkward/__init__.py"

[tool.hatch.build.hooks.vcs]
version-file = "src/dask_awkward/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.setuptools_scm]
write_to = "src/dask_awkward/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
  "-v",
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
]
log_cli_level = "DEBUG"
filterwarnings = [
  "ignore:There is no current event loop",
]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.9"
files = ["src", "tests"]
warn_unused_configs = true
show_error_codes = true
allow_incomplete_defs = false
allow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
  module = ["awkward.*"]
  ignore_missing_imports = true

[[tool.mypy.overrides]]
  module = ["IPython.*"]
  ignore_missing_imports = true

[[tool.mypy.overrides]]
  module = ["fsspec.*"]
  ignore_missing_imports = true

[[tool.mypy.overrides]]
  module = ["pyarrow.*"]
  ignore_missing_imports = true

[[tool.mypy.overrides]]
  module = ["tlz.*"]
  ignore_missing_imports = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.9"
reportPrivateImportUsage = false

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "except ImportError:",
  "NotImplementedError",
  "DaskAwkwardNotImplemented",
  "_ipython_key_completions_",
  "Only highlevel=True is supported",
  "\\.\\.\\.$",
]
fail_under = 90
show_missing = true

[tool.coverage.run]
omit = [
  "*/dask_awkward/lib/unproject_layout.py",
  "*/tests/test_*.py",
  "*/tests/__init__.py",
  "*/version.py",
]
source = ["src/"]

[tool.ruff]
ignore = ["E501", "E402"]
per-file-ignores = {"__init__.py" = ["E402", "F401"]}
