[metadata]
name = dask-awkward
author = Doug Davis
author_email = ddavis@ddavis.io
maintainer = Doug Davis
maintainer_email = ddavis@ddavis.io
description = Awkward Array meets Dask
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-clause
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
packages = find:
package_dir =
    =src
install_requires =
    awkward >=1.4
    dask >=2021.01.0
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[flake8]
ignore = E501
