[metadata]
name = dask-awkward
author = Doug Davis
author_email = ddavis@ddavis.io
maintainer = Doug Davis
maintainer_email = ddavis@ddavis.io
description = Awkward Array meets Dask
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-clause
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
package_dir =
    =src
install_requires =
    awkward >=1.8.0rc3
    dask >=2021.01.0

[options.extras_require]
io =
    pyarrow

test =
    requests
    aiohttp
    pytest
    pytest-cov

complete =
    %(io)s
    %(test)s

docs =
    %(complete)s
    dask-sphinx-theme

[options.packages.find]
where = src
exclude =
    tests

[flake8]
exclude = __init__.py
ignore = E501,W503,E203
