[metadata]
name = dask_awkward
description = Awkward Array meets Dask
long_description = file: README.md
long_description_content_type = text/markdown
author = Doug Davis
author_email = ddavis@ddavis.io
maintainer = Doug Davis
maintainer_email = ddavis@ddavis.io
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    awkward>=1.9.0rc4
    dask>=2022.01.0
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.extras_require]
io =
    pyarrow

test =
    awkward-datasets >=0.0.2
    requests >=2.27.1
    pytest >=6.0
    pytest-cov >=3.0.0

complete =
    %(io)s
    %(test)s

docs =
    %(complete)s
    dask-sphinx-theme >=2.0.3

[options.packages.find]
where = src
exclude =
    tests

[flake8]
exclude = __init__.py
extend-ignore = E501,W503
